public class AnimationConsts
{
    #region PLAYER
    public const string PLAYER_RUN_X_PARAM = "moveX";
    public const string PLAYER_RUN_Y_PARAM = "moveY";
    public const string PLAYER_DEATH_PARAM = "Death";
    #endregion

    #region ENEMY
    public const string ENEMY_ATTACK_PARAM = "Attack"; //grape attack animation
    #endregion

    #region WEAPON
    public const string WEAPON_BOW_FIRE_PARAM = "Fire"; //fire of Bow weapon
    public const string WEAPON_SWORD_ATTACK_PARAM = "Attack"; //attack of Sword weapon
    public const string WEAPON_STAFF_ATTACK_PARAM = "Attack"; //attack of Sword weapon
    #endregion
}
